# Console-Swizzler

./: .gitignore  CPPLINT.cfg  Doxyfile  LICENSE  README.md  meson.build  meson_options.txt  setup.cfg
.github/workflows/: ci.yml  doxygen.yml
batch_files/: _ps4_swizzle.bat  _ps4_unswizzle.bat  _switch_swizzle.bat  _switch_unswizzle.bat  _switchue_swizzle.bat  _switchue_unswizzle.bat
docs/: README.md
docs/doxygen/: header.html
include/: console-swizzler.h
src/: context.c  context.h  mipcontext.h  priv.h  swizfunc.c  swizfunc.h  util.c
swizzler-cli/: CPPLINT.cfg  dds.c  dds.h  main.c
tests/: context_tests.hpp  main.cpp  meson.build  swizzle_tests.hpp  util_tests.hpp
tests/dds/: bc1_256x256_mips.dds  bc1_256x256_mips_ps4.dds  bc1_256x256_mips_switch.dds  meson.build
